Change to get this running as a service

--- a/onprem-rhel-registry/defaults/main.yml
+++ b/onprem-rhel-registry/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
 # defaults file for onprem-rhel-registry
+registry_user: root
+registry_dir: /opt/registry
+certs_dir: "{{ registry_dir }}/certs"
